Работа над страницей WorkDepartmentPage завершена

--- a/CompanyNews/Views/AdminApp/WorkingWithData/NewsCategoryWorkingPage.xaml
+++ b/CompanyNews/Views/AdminApp/WorkingWithData/NewsCategoryWorkingPage.xaml
@@ -91,7 +91,7 @@ TextWrapping="Wrap"/>
                                      materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
                                      MaxLength="1000" TextWrapping="Wrap" Width="300"/>
 
-            <!--Аккаунт заблокирован-->
+            <!--Архив-->
             <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Horizontal" Margin="0,40,0,0" 
             HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding IsBlockingUsers, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <TextBlock Text="Добавить в архив" FontWeight="ExtraBold" FontSize="14"/>
