--- a/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
+++ b/CompanyNews/Views/AdminApp/WorkDepartmentPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:CompanyNews.Views.AdminApp"
       xmlns:ViewModel="clr-namespace:CompanyNews.ViewModels.AdminApp"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-      mc:Ignorable="d" 
+      mc:Ignorable="d" SizeChanged="Window_SizeChanged"
       MouseLeftButtonDown="Window_MouseLeftButtonDown"
       MinHeight="700" Width="Auto"
       Title="WorkDepartmentPage">
